static/react-source/src/Views/Main.scss
/* ... */
// lessons interface------------------------------------

.videos-component                             {flex-grow: 1;
                                               flex-direction: column;
                                               padding-top: 0;
    .col                                      {overflow: hidden;
                                               display: flex;
                                               flex-direction: column;
                                               padding-right: 0;
                                               padding-left: 0;
        .lessons-display-container            {overflow: hidden;
            .lessonlist                       {overflow: auto;
                                               max-height: 100%;
                                               padding-left: 0;
                                               padding-right: 0;
                .card                         {border-radius: 0;
                    .card-header              {padding-top: 0;
                                               padding-bottom: 0;
                                               background-color: $table-background;
                                               border-color: darken($table-background, 10%);
                        .btn                  {text-align: left;
                                               padding-left: 0;
                                               padding-right: 0;
                            .lessonLink-grammar   {font-size: $font-size-sm;
                            }
                            .lessonLink-vocab   {font-size: $font-size-sm;
                        }
                        }
                    }
                    .card-body                {padding: 0;
                        .list-group.item      {border-right: 0;
                                               border-left: 0;
                                               border-radius: 0;
                        }
                    }
                }
            }
            .video-display                    {padding-right: 0;
                                               padding-left: 0;
                .video-mask                   {position: absolute;
                    .spinner-grow             {margin: 0 auto;
                    }
                }
                .youtube-container            {overflow: hidden;
                                               position: absolute;
                                               width: 100%;
                                               opacity: 0;
                    @include react-transition-fade("youtube-container", 200);
                    &.empty                   {background-color: #fff;
                                               padding-left: 1rem;
                                               padding-right: 1rem;
                                               padding-top: 2rem;
                        @include react-transition-fade("youtube-container", 200);
                    }
                    &::after                  {padding-top: 56.25%;
                                               display: block;
                                               content: "";
                    }
                    iframe                    {position: absolute;
                                               top: 0;
                                               left: 0;
                                               width: 100%;
                                               height: 100%;
                    }
                    .iframe-mask              {position: absolute;
                                               width: 100%;
                                               height: 100%;
                                               background-color: #fff;
                                               opacity: 1;
                                               z-index: 10;
                        &.iframe-loaded       {opacity: 0;
                                               transition: all 500ms;
                        }
                    }
                }
            }
        }
    }
}
/* ... */

